data Migration Application (Package for Destination Org)/objects/Data_migration_Record__b.object
<CustomObject>
    <fields>
        <fullName>indexValue__c</fullName>
        <label>indexValue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>objectAPIName__c</fullName>
        <label>objectAPIName</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordJSON__c</fullName>
        <label>recordJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>record_id__c</fullName>
        <label>record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>self_lookups__c</fullName>
        <label>self lookups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <indexes>
        <fullName>index</fullName>
        <fields>
            <name>objectAPIName__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>indexValue__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>index</label>
    </indexes>
    <label>Data migration Record</label>
    <pluralLabel>Data migration Records</pluralLabel>
</CustomObject>